--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="support2048.js"></script>
     <script type="text/javascript" src="showanimation2048.js"></script>
     <script type="text/javascript" src="main2048.js"></script>
-    
+    <link rel="icon" type="image/x-icon" href="2.ico" />
+
 </head>
 <body>
     <header>
